--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="boxHighlight centerElement email paddingHor paddingBottom">
-                Junico.nrc@Gmail.com
+                adao.nrc@edu.unifil.br
                 <div class="clipboard">
                     <button onmouseout="OnExitContainer()" onclick="OnClick();">
                         <img class="picUi centerLine" src="images/body/ui/clipboard.png">
