--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                 <ul class="list">    
                     <li><a href="https://itch.io/profile/nrc"><img class="picApps" src="images/body/apps/Itchio.png"></a></li>
                     <li><a href="https://github.com/nrc-junior?tab=repositories"><img class="picApps" src="images/body/apps/Github.png"></a></li>
-                    <li><a href="https://www.youtube.com/c/NRCjr"><img class="picApps" src="images/body/apps/Youtube.png"></a></li>
+                    <li><a href="https://www.youtube.com/watch?v=Fuuvxp7V2tk"><img class="picApps" src="images/body/apps/Youtube.png"></a></li>
                     <li><a href="https://twitter.com/NRCode"><img class="picApps" src="images/body/apps/Twitter.png"></a></li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
                 </div> 
             </div>
             <div class="marginTop centerText">
-                <span class="textWhite">Tenho 23 anos, estou no ultimo ano do curso de <span class="textYellow"><b>Ciências da Computação</b></span> 
+                <span class="textWhite">Tenho 22 anos, estou no ultimo ano do curso de <span class="textYellow"><b>Ciências da Computação</b></span> 
                 na faculdade UniFil em Londrina. Meu projeto favorito é <a onclick="document.getElementById('fav').scrollIntoView();">Commodoor</a>! </span>
             </div>
 
