--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                 </div> 
             </div>
             <div class="marginTop centerText">
-                <span class="textWhite">Tenho 22 anos, estou no ultimo ano do curso de <span class="textYellow"><b>Ciências da Computação</b></span> 
+                <span class="textWhite">Tenho 22 anos, estou no último ano do curso de <span class="textYellow"><b>Ciências da Computação</b></span> 
                 na faculdade UniFil em Londrina. Meu projeto favorito é <a onclick="document.getElementById('fav').scrollIntoView();">Commodoor</a>! </span>
             </div>
 
